# loom

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  TASKS.md  alembic.ini  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
context/: architecture_mvp.html  architecture_prod.html  component_breakdown.html  implementation_plan.html  llm_agnostic_stack.html  loom_dsl_design.html  org_virtualisation_system_design.html  plantuml_diagrams.html
deploy/: docker-compose.local.yml  docker-compose.prod.yml
deploy/k8s/: loom-deployment.yaml
deploy/terraform/: README.md
docs/architecture/: gui_ia_api_contracts.md  production-readiness.md
docs/checklists/: go-live.md
docs/ops/: local-golden-path.md  slo-sli.md  tool_bootstrap_matrix.md  toolchain-conformance.md
docs/runbooks/: backup-restore.md  db-outage.md  local-troubleshooting.md  provider-outage.md  stuck-workflows.md
docs/security/: threat-model.md
examples/: custom_agentic_workflow.md  docs_org_bundle.yaml  workflow_template.md
llm/: ARCHITECTURE.md  CODING_GUIDELINES.md  PRD.md  TASKS.md  UI TASKS.md  UI_SPEC.md
loadtests/: locustfile.py
loom/: models.py
loom/adapters/: gh_adapter.py  git_adapter.py  langsmith_adapter.py  mermaid_adapter.py  openai_agents_adapter.py  opencode_adapter.py  plantuml_adapter.py
loom/app/: bundle_ops.py  chat_cli.py  config.py  control_plane_cli.py  dependency_injection.py  main.py  security_middleware.py  startup_checks.py
loom/compiler/: compiler_service.py  ir_models.py  ir_validator.py  llm_compiler.py  markdown_parser.py  section_normalizer.py
loom/execution/: async_worker.py  collaborative_step_runner.py  completion_evaluator.py  context_assembler.py  model_router.py  runtime_bindings.py  step_runner.py
loom/ingress/: admin_adapter.py  openclaw_adapter.py  openclaw_models.py  permissions.py  request_models.py  response_models.py  security.py
loom/integrations/: bootstrap_bindings.py  health.py  openclaw_adapter_runtime.py
loom/kernel/: artifact_service.py  execution_coordinator.py  execution_planner.py  participant_resolver.py  policy_engine.py  state_machine.py  state_partition_service.py  task_service.py  transition_engine.py  workflow_service.py
loom/memory/: consolidation_service.py  episodic_memory.py  graphiti_adapter.py  invalidation_service.py  memory_service.py  semantic_memory.py  (+2 more)
scripts/: bootstrap.sh  bootstrap_local_stack.sh  bootstrap_tools.sh  check_toolchain_conformance.sh  init_env_local.sh  lint.sh  load_docs_pack.py  publish_workflow.py  run_migrations.sh  smoke_external.py  verify_connectors.sh
src/: exceptions.py
ui/: package.json  pnpm-lock.yaml  tailwind.config.js
(+144 files in other folders)
