[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-kernel"
version = "0.1.0"
description = "Loom: workflow-first multi-agent orchestration kernel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7,<3",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "apscheduler>=3.10,<4",
  "pyyaml>=6.0,<7",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<6",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
]
integrations = [
  "openai>=1.40,<2",
  "langsmith>=0.1.100,<1",
  "psycopg[binary]>=3.1,<4",
  "python-jose>=3.3,<4",
]

[project.scripts]
loom = "loom.app.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["loom*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "I001", "UP015", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
