[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-mvp"
version = "0.1.0"
description = "Loom MVP - Virtual organisation orchestration system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-ai>=0.0.20",
    "instructor>=1.6.0",
    "litellm>=1.40.0",
    "loguru>=0.7.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiosqlite>=0.19.0",
    "langgraph>=0.0.50",
    "sse-starlette>=1.6.0",
    "graphiti-core==0.28.2",
    "httpx>=0.25.0",
    "pyyaml>=6.0.0",
    "tenacity>=9.0.0",
    "mistralai>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
loom = "src.api.gateway:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "I001", "UP015", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.pyright]
python_version = "3.11"
include = ["src"]
exclude = ["**/__pycache__"]
ignore_missing_imports = true
